# sorting-comparison

./: .gitignore  Cargo.toml  README.md  benchmark.py  benchmark.sh  hello.py  plot.py  pyproject.toml
assets/: benchmark_no_compile_no_start.csv  benchmark_no_compile_with_start.csv  benchmark_with_compile_no_start.csv  benchmark_with_compile_with_start.csv
python/: main.py
rust/: Cargo.toml
rust/src/: lib.rs
src/: lib.rs  main.rs  merge_sort.py
